src/objects/Governance_Risk_Association__c.object
<CustomObject>
    <fields>
        <fullName>Current_Risk_Score__c</fullName>
        <formula>Risks__r.Current_Risk_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Owner__c</fullName>
        <formula>Governance__r.Governance_Owner__r.Full_Name__c</formula>
        <label>Governance Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <label>Governance</label>
        <referenceTo>Governance__c</referenceTo>
        <relationshipLabel>Associated Risks</relationshipLabel>
        <relationshipName>Governance_Risks_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Associated Governances</relationshipLabel>
        <relationshipName>Governance_Risks_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Governance/Risk Association</label>
    <nameField>
        <displayFormat>GA{00000}</displayFormat>
        <label>Governance/Risk Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governance/Risk Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>